--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -25,26 +25,6 @@ html, body{
 
 
 	}
-
-	.block-2{
-		h2{
-			@media(min-width: 980px) {
-				text-align: center;
-			}
-		}
-
-		img{
-			width: 80%;
-		}
-	}
-
-	.block-3-1 {
-		h2 {
-			@media(min-width: 980px) {
-				text-align: center;
-			}
-		}
-	}
 	
 
 	.block-3{
@@ -54,13 +34,6 @@ html, body{
 	}
 
 
-	.block-4{
-		h2{
-			@media(min-width: 980px) {
-				text-align: center;
-			}
-		}
-	}
 
 	.block-5{
 		img{
