--- a/styles/_slider.scss
+++ b/styles/_slider.scss
@@ -76,3 +76,11 @@
 }
 	
 }
+
+.splide-arrow-my{
+	background: $white;
+	width: 60px;
+	height: 60px;
+	opacity: 1;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
